@@ -1,5 +1,10 @@
 2007-03-15  Ross Burton  <ross@burtonini.com>
 
+	* src/eds-bookview.c:
+	Add verbose contact printing.
+
+2007-03-15  Ross Burton  <ross@burtonini.com>
+
 	* dummy-ebook/Makefile.am:
 	* src/Makefile.am:
 	Add -Wall.
